# generic-model-wrapper

./: .dockerignore  .gitignore  .rsyncignore  BaseModel.py  BlobModelWrapper.py  Dockerfile  PyfuncModel.py  README.md  api.py  blob_test.py  main 2.py  main.py  main_edits.py  main_entry.py  metrics.ipynb  model_wrapper_test.py  progress.md  pyproject.toml  requirements.txt  temp.py  tensorflow_route.py  test.ipynb  test.md  test_blob_wrapper.py  tests.py  tests2.py  torch_model_metrics.xlsx  torch_route.py  view_blob.py  wrapper_config.json
.github/workflows/: build-inference.yml  deploy-inference.yml  deploy-saving.yml  generic-model-wrapper-AutoDeployTrigger-901af131-6983-40df-94d4-333759ff4353.yml  generic-model-wrapper-AutoDeployTrigger-d62fbe99-ffb5-4dc4-bf2a-c4ce1d22a453.yml  model-wrapper-saving-AutoDeployTrigger-c1b824dc-e7dc-4eeb-a4ec-20f409778414.yml
configs/: hf_task_mapping.py  logging_config.yaml  model_config.json  model_test_config.py
core/: huggingface_route.py  wrapper.py
evaluator/: automodel_check.py
generic-model-wrapper/: main.py  pyproject.toml
inference/: .dockerignore  .gitignore  main.py  pyproject.toml
inference/core/: config.py  logger.py  process_inputs.py  wrapper.py
model/: main.py
pipeline/: model_inference.py  model_loading_pipeline.py
saving/: .gitignore  Dockerfile  main.py  pyproject.toml  test.md
saving/.github/workflows/: deploy-saving.yml
saving/core/: config.py  huggingface_route.py  logger.py  spacy_route.py  tensorflow_route.py  torch_route.py  wrapper.py
saving/test/: inferencing.py  model_wrapper_test.py
terraformtemplate/: main.tf  variable.tf
test/: inferencing.py  model_wrapper_test.py  view_blob.py
utils/: api_interceptor.py  env_manager.py  huggingface_route.py  logger.py  prepare_binary_input.py  preprocessing.py  process_inputs.py  resource_manager.py  tensorflow_route.py  torch_route.py
