[tool.poetry.dependencies]
python = "^3.10"

absl-py = "==2.2.2"
annotated-types = "==0.7.0"
anyio = "==4.9.0"
astunparse = "==1.6.3"
azure-core = "==1.33.0"
azure-identity = "==1.21.0"
azure-storage-blob = "==12.25.1"
bleach = "==6.2.0"
cachetools = "==5.5.2"
certifi = "==2025.1.31"
cffi = "==1.17.1"
charset-normalizer = "==3.4.1"
click = "==8.1.8"
cryptography = "==44.0.2"
et-xmlfile = "==2.0.0"
exceptiongroup = "==1.2.2"
fastapi = "==0.115.12"
filelock = "==3.18.0"
flatbuffers = "==25.2.10"
fsspec = "==2025.3.2"
gast = "==0.4.0"
google-auth = "==2.39.0"
google-auth-oauthlib = "==0.4.6"
google-pasta = "==0.2.0"
grpcio = "==1.71.0"
h11 = "==0.14.0"
h5py = "==3.13.0"
huggingface-hub = "==0.30.2"
idna = "==3.10"
isodate = "==0.7.2"
jinja2 = "==3.1.6"
kaggle = "==1.7.4.2"
kagglehub = "==0.3.11"
keras = "==3.9.2"
keras-hub = "==0.20.0"
keras-preprocessing = "==1.1.2"
libclang = "==18.1.1"
markdown = "==3.8"
markdown-it-py = "==3.0.0"
markupsafe = "==3.0.2"
mdurl = "==0.1.2"
ml-dtypes = "==0.5.1"
mpmath = "==1.3.0"
msal = "==1.32.0"
msal-extensions = "==1.3.1"
namex = "==0.0.8"
networkx = "==3.4.2"
numpy = "==1.26.4"
nvidia-cublas-cu12 = "==12.4.5.8"
nvidia-cuda-cupti-cu12 = "==12.4.127"
nvidia-cuda-nvrtc-cu12 = "==12.4.127"
nvidia-cuda-runtime-cu12 = "==12.4.127"
nvidia-cudnn-cu12 = "==9.1.0.70"
nvidia-cufft-cu12 = "==11.2.1.3"
nvidia-curand-cu12 = "==10.3.5.147"
nvidia-cusolver-cu12 = "==11.6.1.9"
nvidia-cusparse-cu12 = "==12.3.1.170"
nvidia-cusparselt-cu12 = "==0.6.2"
nvidia-nccl-cu12 = "==2.21.5"
nvidia-nvjitlink-cu12 = "==12.4.127"
nvidia-nvtx-cu12 = "==12.4.127"
oauthlib = "==3.2.2"
openpyxl = "==3.1.5"
opt-einsum = "==3.4.0"
optree = "==0.15.0"
packaging = "==24.2"
pandas = "==2.2.3"
pillow = "==11.2.1"
protobuf = "==5.29.4"
psutil = "==7.0.0"
pyasn1 = "==0.6.1"
pyasn1-modules = "==0.4.2"
pycparser = "==2.22"
pydantic = "==2.11.3"
pydantic-core = "==2.33.1"
pygments = "==2.19.1"
pyjwt = "==2.10.1"
python-dateutil = "==2.9.0.post0"
python-dotenv = "==1.1.0"
python-slugify = "==8.0.4"
pytz = "==2025.2"
pyyaml = "==6.0.2"
regex = "==2024.11.6"
requests = "==2.32.3"
requests-oauthlib = "==2.0.0"
rich = "==14.0.0"
rsa = "==4.9.1"
safetensors = "==0.5.3"
setuptools = "==78.1.0"
six = "==1.17.0"
sniffio = "==1.3.1"
soundfile = "==0.13.1"
starlette = "==0.46.2"
sympy = "==1.13.1"
tensorboard = "==2.19.0"
tensorboard-data-server = "==0.7.2"
tensorboard-plugin-wit = "==1.8.1"
tensorflow = "==2.19.0"
tensorflow-estimator = "==2.10.0"
tensorflow-io-gcs-filesystem = "==0.37.1"
tensorflow-text = "==2.19.0"
termcolor = "==3.0.1"
text-unidecode = "==1.3"
tfimm = "==0.2.14"
tokenizers = "==0.21.1"
torch = "==2.6.0"
torchaudio = "==2.6.0"
torchvision = "==0.21.0"
tqdm = "==4.67.1"
transformers = "==4.51.3"
triton = "==3.2.0"
typing-extensions = "==4.13.2"
typing-inspection = "==0.4.0"
tzdata = "==2025.2"
urllib3 = "==2.4.0"
uvicorn = "==0.34.1"
webencodings = "==0.5.1"
werkzeug = "==3.1.3"
wheel = "==0.45.1"
wrapt = "==1.17.2"
