[project]
name = "generic-model-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-storage-blob>=12.25.1",
    "fastapi[all]>=0.115.12",
    "huggingface-hub[hf-xet]>=0.33.0",
    "librosa>=0.11.0",
    "pillow>=11.2.1",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "wheel>=0.45.1",
]
